--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 header {
     padding: 30px 10px;
-    text-align: center;
+    background-color: darkslateblue;
     color: aliceblue;
     font-weight: bold;
     font-size: 30px;
+    text-align: center;
 }
