add placeholder unordered list for saved locations to later populate

--- a/style.css
+++ b/style.css
@@ -7,13 +7,13 @@ header {
     text-align: center;
 }
 
-form.search button{
+form#search button{
     color: white;
     background-color: darkslateblue;
     border: 1px solid grey;
     border-radius: 5px;
 }
 
-form.search button:hover {
+form#search button:hover {
     background-color: slateblue;
 }
