create visual framework for 5-day forecast

--- a/style.css
+++ b/style.css
@@ -34,20 +34,26 @@ img {
     width: 100px;
 }
 
-.mild{
+.mild {
     color: white;
     background-color: lightgreen;
     border-radius: 5px;
 }
 
-.moderate{
+.moderate {
     color: white;
     background-color: orange;
     border-radius: 5px;
 }
 
-.severe{
+.severe {
     color: white;
     background-color: red;
     border-radius: 5px;
+}
+
+.day-card {
+    background-color: dodgerblue;
+    color: white;
+    margin: 10px;
 }
